# cxx-ci-demo

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
include/calculator/: Calculator.h  Value.h
scripts/: after-failure.sh  after-success.sh  build.sh
src/: Calculator.cpp
tests/: AddTest.cpp  CMakeLists.txt  DivideTest.cpp
